<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_home"
            android:layout_width="76dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="70dp"
            android:paddingLeft="50dp"
            android:text="@string/welcome"
            android:textAlignment="viewStart"
            android:textColor="@color/dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:gravity="left"
            android:padding="15dp"
            android:background="@drawable/button_border"
            android:id="@+id/tvcorreo"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text" />

        <EditText
            android:gravity="left"
            android:padding="15dp"
            android:background="@drawable/button_border"
            android:id="@+id/tvpasswor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot"
            android:textAlignment="viewEnd"
            android:textColor="@color/darkblue" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="322dp"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/dark"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/login2"
            android:layout_gravity="center"
            app:cornerRadius="12px" />

        <TextView
            android:id="@+id/tvmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="180dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register1"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/register2"
                android:textColor="@color/primary" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>