<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ForgotActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/back_login"
            android:layout_width="76dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/icon" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rubik"
            android:paddingLeft="35dp"
            android:text="@string/forgot2"
            android:textAlignment="viewStart"
            android:textColor="@color/dark"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:paddingLeft="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="30dp"
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionforgot"
            android:layout_marginBottom="50dp"
            android:textColor="@color/gray"
            />

        <EditText
            android:gravity="left"
            android:padding="15dp"
            android:background="@drawable/button_border"
            android:id="@+id/editTextText11"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
           android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"

            android:layout_marginBottom="30dp"
            android:inputType="text"

            />

        <Button
            android:id="@+id/button2"
            android:layout_width="322dp"
            android:layout_height="65dp"

            android:backgroundTint="@color/dark"
            android:text="@string/code"
            android:layout_gravity="center"

            app:cornerRadius="12dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>