<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/rubik"
            android:text="@string/iub"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"

            android:textStyle="bold" />

        <Button
            style="?attr/materialButtonOutlinedStyle"

            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/dark"

            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center"

            app:cornerRadius="12dp" />

        <Button
            android:layout_marginRight="5dp"

            android:id="@+id/btnregister"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            app:cornerRadius="12dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@android:color/black" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>